// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tables doesnt wrap nested tables 1`] = `
"
			<section class=\\"mw-parser-output\\">
				<div class=\\"noresize\\"><table class=\\"wikitable\\">
					<tbody>
						<tr><th>table table table</th></tr>
						<tr><td><table><tbody><tr><th>table table table</th></tr></tbody></table></td><td></td></tr>
					</tbody>
				</table></div>

			</section>
		"
`;

exports[`tables doesnt wrap tables that are already wrapped 1`] = `
"
			<div class=\\"mw-parser-output\\">
				<div>
					<table>
						<tbody>
							<tr><th>table table table</th></tr>
							<tr><td><table><tbody><tr><th>table table table</th></tr></tbody></table></td><td></td></tr>
						</tbody>
					</table>
				</div>
			</div>
		"
`;

exports[`tables doesnt wrap tables that are not wikitables 1`] = `
"
			<table>
				<tbody>
					<tr><th>table table table</th></tr>
					<tr><td><table><tbody><tr><th>table table table</th></tr></tbody></table></td><td></td></tr>
				</tbody>
			</table>
		"
`;

exports[`tables wraps multiple table with div 1`] = `
"
			<section class=\\"mw-parser-output\\">
				<div class=\\"noresize\\"><table class=\\"wikitable\\">
					<tbody><tr><th>table table table</th></tr></tbody>
				</table></div>
				<div class=\\"noresize\\"><table class=\\"wikitable\\">
					<tbody><tr><th>table table table</th></tr></tbody>
				</table></div>
			</section>
		"
`;

exports[`tables wraps table with div 1`] = `
"
			<section class=\\"mw-parser-output\\">
				<div class=\\"noresize\\"><table class=\\"wikitable\\">
					<tbody><tr><th>table table table</th></tr></tbody>
				</table></div>
			</section>
		"
`;
